@@ -40,7 +40,7 @@ private final BanckService service;
     public List<Money> reduceMoney(final long amount){
         List<Money>toRemove = new ArrayList<>();
         for (int i = 0; i < amount; i++){
-        toRemove.add(this.money.removeFirst());
+        toRemove.add(this.money.remove(0));
         }
 
         return toRemove;
